aks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-docker-demo
  namespace: aks-practice
  labels:
    app: spring-docker-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-docker-demo

  template:
    metadata:
      labels:
        app: spring-docker-demo
    spec:
      containers:
        - name: spring-docker-demo
          image: kktest1.azurecr.io/spring-demo:v10
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: spring-docker-demo-service-lb
  namespace: aks-practice
spec:
  selector:
    app: spring-docker-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
