services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: spring-docker-demo-service-lb
  namespace: ingress-test
spec:
  selector:
    app: spring-docker-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
